==> RT-Thread/rt-thread/bsp/apm32/libraries/Drivers/drv_usart.c <==
#include "board.h"
#include "drv_usart.h"

static rt_err_t apm32_uart_configure(struct rt_serial_device *serial, struct serial_configure *cfg)
{
    USART_Config_T USART_ConfigStruct;
    RT_ASSERT(serial != RT_NULL);
    RT_ASSERT(cfg != RT_NULL);

    struct apm32_usart *usart_instance = (struct apm32_usart *) serial->parent.user_data;

    apm32_usart_init();

    USART_ConfigStruct.baudRate = cfg->baud_rate;
    USART_ConfigStruct.mode = USART_MODE_TX_RX;
    USART_ConfigStruct.parity = USART_PARITY_NONE;

#if defined(SOC_SERIES_APM32F0)
    switch (cfg->flowcontrol)
    {
    case RT_SERIAL_FLOWCONTROL_NONE:

        USART_ConfigStruct.hardwareFlowCtrl = USART_FLOW_CTRL_NONE;
        break;
    case RT_SERIAL_FLOWCONTROL_CTSRTS:
        USART_ConfigStruct.hardwareFlowCtrl = USART_FLOW_CTRL_RTS_CTS;
        break;
    default:
        USART_ConfigStruct.hardwareFlowCtrl = USART_FLOW_CTRL_NONE;
        break;
    }
#elif defined(SOC_SERIES_APM32F1) || defined(SOC_SERIES_APM32E1) || defined(SOC_SERIES_APM32S1) \
    || defined(SOC_SERIES_APM32F4)
    switch (cfg->flowcontrol)
    {
    case RT_SERIAL_FLOWCONTROL_NONE:
        USART_ConfigStruct.hardwareFlow = USART_HARDWARE_FLOW_NONE;
        break;
    case RT_SERIAL_FLOWCONTROL_CTSRTS:
        USART_ConfigStruct.hardwareFlow = USART_HARDWARE_FLOW_RTS_CTS;
        break;
    default:
        USART_ConfigStruct.hardwareFlow = USART_HARDWARE_FLOW_NONE;
        break;
    }
#endif /* SOC_SERIES_APM32F0 */

    switch (cfg->data_bits)
    {
    case DATA_BITS_8:
        if (cfg->parity == PARITY_ODD || cfg->parity == PARITY_EVEN)
            USART_ConfigStruct.wordLength = USART_WORD_LEN_9B;
        else
            USART_ConfigStruct.wordLength = USART_WORD_LEN_8B;
        break;
    case DATA_BITS_9:
        USART_ConfigStruct.wordLength = USART_WORD_LEN_9B;
        break;
    default:
        USART_ConfigStruct.wordLength = USART_WORD_LEN_8B;
        break;
    }

    switch (cfg->stop_bits)
    {
    case STOP_BITS_1:
        USART_ConfigStruct.stopBits = USART_STOP_BIT_1;
        break;
    case STOP_BITS_2:
        USART_ConfigStruct.stopBits = USART_STOP_BIT_2;
        break;
    default:
        USART_ConfigStruct.stopBits = USART_STOP_BIT_1;
        break;
    }

    switch (cfg->parity)
    {
    case PARITY_NONE:
        USART_ConfigStruct.parity     = USART_PARITY_NONE;
        break;
    case PARITY_ODD:
        USART_ConfigStruct.parity     = USART_PARITY_ODD;
        break;
    case PARITY_EVEN:
        USART_ConfigStruct.parity     = USART_PARITY_EVEN;
        break;
    default:
        USART_ConfigStruct.parity     = USART_PARITY_NONE;
        break;
    }

    USART_Config(usart_instance->usartx, &USART_ConfigStruct);
    USART_Enable(usart_instance->usartx);

    return RT_EOK;
}

static rt_err_t apm32_uart_control(struct rt_serial_device *serial, int cmd, void *arg)
{
    struct apm32_usart *usart;

    RT_ASSERT(serial != RT_NULL);

    usart = (struct apm32_usart *) serial->parent.user_data;
    RT_ASSERT(usart != RT_NULL);

#if defined(SOC_SERIES_APM32F0)
    switch (cmd)
    {
    /* disable interrupt */
    case RT_DEVICE_CTRL_CLR_INT:

        /* disable rx irq */
        NVIC_DisableIRQRequest(usart->irq_type);

        /* disable interrupt */
        USART_DisableInterrupt(usart->usartx, USART_INT_RXBNEIE);

        break;

    /* enable interrupt */
    case RT_DEVICE_CTRL_SET_INT:
        /* enable rx irq */
        NVIC_EnableIRQRequest(usart->irq_type, 1);

        /* enable interrupt */
        USART_EnableInterrupt(usart->usartx, USART_INT_RXBNEIE);
        break;
    }
#elif defined(SOC_SERIES_APM32F1) || defined(SOC_SERIES_APM32E1) || defined(SOC_SERIES_APM32S1) \
    || defined(SOC_SERIES_APM32F4)
    switch (cmd)
    {
    /* disable interrupt */
    case RT_DEVICE_CTRL_CLR_INT:

        /* disable rx irq */
        NVIC_DisableIRQRequest(usart->irq_type);

        /* disable interrupt */
        USART_DisableInterrupt(usart->usartx, USART_INT_RXBNE);

        break;

    /* enable interrupt */
    case RT_DEVICE_CTRL_SET_INT:
        /* enable rx irq */
        NVIC_EnableIRQRequest(usart->irq_type, 1, 0);

        /* enable interrupt */
        USART_EnableInterrupt(usart->usartx, USART_INT_RXBNE);
        break;
    }
#endif /* SOC_SERIES_APM32F0 */
    return RT_EOK;
}

static int apm32_uart_putc(struct rt_serial_device *serial, char c)
{
    struct apm32_usart *usart;
    RT_ASSERT(serial != RT_NULL);

    usart = (struct apm32_usart *) serial->parent.user_data;

    RT_ASSERT(usart != RT_NULL);

    USART_TxData(usart->usartx, (uint8_t) c);

    while (USART_ReadStatusFlag(usart->usartx, USART_FLAG_TXC) == RESET);

    return 1;
}

static int apm32_uart_getc(struct rt_serial_device *serial)
{
    int ch;
    struct apm32_usart *usart;
    RT_ASSERT(serial != RT_NULL);
    usart = (struct apm32_usart *) serial->parent.user_data;

    RT_ASSERT(usart != RT_NULL);

    ch = -1;
    if (USART_ReadStatusFlag(usart->usartx, USART_FLAG_RXBNE) != RESET)
    {
        ch = USART_RxData(usart->usartx);
    }
    return ch;
}

int rt_hw_usart_init(void)
{
    rt_size_t obj_num;
    int index;

    obj_num = sizeof(usart_config) / sizeof(struct apm32_usart);
    struct serial_configure config = RT_SERIAL_CONFIG_DEFAULT;
    rt_err_t result = 0;

    for (index = 0; index < obj_num; index++)
    {
        usart_config[index].serial.ops = &apm32_usart_ops;
        usart_config[index].serial.config = config;

        /* register USART device */
        result = rt_hw_serial_register(&usart_config[index].serial,
                                       usart_config[index].name,
                                       RT_DEVICE_FLAG_RDWR | RT_DEVICE_FLAG_INT_RX
                                       | RT_DEVICE_FLAG_INT_TX, &usart_config[index]);
        RT_ASSERT(result == RT_EOK);
    }

    return result;
}
